--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,33 +1,28 @@
 name: Deploy docs
 
-on:
-  push:
-    branches:
+on: 
+  push: 
+    branches: 
       - master
 
-jobs:
+jobs: 
   build-and-deploy:
     runs-on: ubuntu-latest
-    steps:
+    steps: 
       - name: Checkout
         uses: actions/checkout@v3
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
-        with:
-          node-version: 16.x
-          cache: "npm"
-          cache-dependency-path: "**/package-lock.json"
+        with: 
+          node-version: 16
 
       - run: npm ci
 
       - run: npm run build
-        env:
-          TURBO_TOKEN: ${{ secrets.VERCEL_TOKEN}}
-          TURBO_TEAM: saturdayintokyo
 
       - name: Deploy storybook
         working-directory: ./packages/docs
         run: npm run deploy-storybook -- --ci --existing-output-dir=storybook-static
-        env:
+        env: 
           GH_TOKEN: ${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}
